--- a/css/ezz.css
+++ b/css/ezz.css
@@ -5,31 +5,38 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+
 :root {
   --main-color: #2196f3;
   --main-color-alt: #1787e0;
   --main-transition: 0.3s;
 }
+
 html {
   scroll-behavior: smooth;
 }
+
 body {
   font-family: "Cairo", sans-serif;
 }
+
 a {
   text-decoration: none;
 }
+
 ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
+
 .container {
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
+
 /* Small Devices */
 @media (min-width: 768px) {
   .container {
@@ -62,6 +69,7 @@ ul {
   -moz-box-shadow: 0 0 10px #ddd;
   box-shadow: 0 0 10px #ddd;
 }
+
 .header .container {
   display: flex;
   justify-content: space-between;
@@ -69,6 +77,7 @@ ul {
   flex-wrap: wrap;
   position: relative;
 }
+
 .header .container .logo {
   color: var(--main-color);
   font-weight: bold;
@@ -78,21 +87,25 @@ ul {
   justify-content: center;
   align-items: center;
 }
+
 @media (max-width: 767px) {
   .header .container .logo {
     width: 100%;
     height: 50px;
   }
 }
+
 .header .container .main-nav {
   display: flex;
 }
+
 @media (max-width: 767px) {
   .header .container .main-nav {
     margin: auto;
   }
 }
-.header .container .main-nav > li > a {
+
+.header .container .main-nav>li>a {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -103,14 +116,16 @@ ul {
   transition: var(--main-transition);
   overflow: hidden;
 }
+
 @media (max-width: 767px) {
-  .header .container .main-nav > li > a {
+  .header .container .main-nav>li>a {
     padding: 10px;
     font-size: 14px;
     height: 40px;
   }
 }
-.header .container .main-nav > li > a::before {
+
+.header .container .main-nav>li>a::before {
   content: "";
   position: absolute;
   background-color: var(--main-color);
@@ -120,12 +135,148 @@ ul {
   left: -100%;
   transition: var(--main-transition);
 }
-.header .container .main-nav > li > a:hover {
+
+.header .container .main-nav>li>a:hover {
   color: var(--main-color);
   background-color: #fafafa;
 }
-.header .container .main-nav > li > a:hover::before {
+
+.header .container .main-nav>li>a:hover::before {
   left: 0;
 }
 
 /* End Header section */
+
+/* Start Landing section */
+
+.landing {
+  position: relative;
+}
+
+.landing::before {
+  content: "";
+  position: absolute;
+  top: -40px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ececec;
+  z-index: -1;
+  transform: skew(0, -6deg);
+  transform-origin: 0 0;
+}
+
+.landing .container {
+  min-height: calc(100vh - 72px);
+  display: flex;
+  align-items: center;
+  padding-bottom: 120px;
+}
+
+.landing .text {
+  flex: 1;
+}
+
+@media (max-width: 991px) {
+  .landing .text {
+    text-align: center;
+  }
+}
+
+.landing .text h1 {
+  font-size: 40px;
+  margin: 0;
+  letter-spacing: -2px;
+}
+
+@media (max-width: 767px) {
+  .landing .text h1 {
+    font-size: 28px;
+  }
+}
+
+.landing .text p {
+  font-size: 23px;
+  line-height: 1.7;
+  margin: 5px 0 0;
+  color: #666;
+  max-width: 500px;
+}
+
+@media (max-width: 991px) {
+  .landing .text p {
+    margin: 10px auto;
+  }
+}
+
+@media (max-width: 767px) {
+  .landing .text p {
+    font-size: 18px;
+  }
+}
+
+.landing .image img {
+  width: 600px;
+  position: relative;
+  animation: up-and-down 5s linear infinite;
+}
+
+@media (max-width: 991px) {
+  .landing .image {
+    display: none;
+  }
+}
+
+.landing .go-down {
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: var(--main-color);
+  transition: var(--main-transition);
+}
+
+.landing .go-down:hover {
+  color: var(--main-color-alt);
+}
+
+.landing .go-down i {
+  animation: bouncing 1.5s infinite;
+}
+
+/* End Landing section */
+
+/* Start Animation */
+
+@keyframes up-and-down {
+  0% {
+    top: 0;
+  }
+
+  50% {
+    top: -50px;
+  }
+
+  100% {
+    top: 0;
+  }
+}
+
+@keyframes bouncing {
+
+  0%,
+  10%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+
+  40%,
+  60% {
+    transform: translateY(-15px);
+  }
+}
+
+/* Start Animation */
