--- a/css/ezz.css
+++ b/css/ezz.css
@@ -12,6 +12,7 @@
   --main-transition: 0.3s;
   --main-padding-top: 100px;
   --main-padding-bottom: 100px;
+  --section-background: #ececec;
 }
 
 html {
@@ -296,7 +297,7 @@ ul {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #ececec;
+  background-color: var(--section-background);
   z-index: -1;
   transform: skew(0, -6deg);
   transform-origin: 0 0;
@@ -449,6 +450,210 @@ ul {
 
 /* End Articles section */
 
+/* Start Gallery section */
+
+.gallery {
+  padding-top: var(--main-padding-top);
+  padding-bottom: var(--main-padding-bottom);
+  background-color: var(--section-background);
+  position: relative;
+}
+
+.gallery .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 40px;
+}
+
+.gallery .container .box {
+  padding: 15px;
+  background-color: #fff;
+  box-shadow: 0px 12px 20px 0px rgb(0 0 0 / 13%),
+    0px 2px 4px 0px rgb(0 0 0 / 12%);
+}
+
+.gallery .container .box .image {
+  position: relative;
+  overflow: hidden;
+}
+
+.gallery .container .box .image::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgb(255 255 255 / 20%);
+  width: 0;
+  height: 0;
+  opacity: 0;
+  z-index: 2;
+}
+
+.gallery .container .box .image:hover::before {
+  animation: flashing 0.7s;
+}
+
+.gallery .container .box .image img {
+  max-width: 100%;
+  transition: transform var(--main-transition);
+}
+
+.gallery .container .box .image:hover img {
+  transform: scale(1.1) rotate(5deg);
+}
+
+/* End Gallery section */
+
+/* Start Features section */
+
+.features {
+  padding-top: var(--main-padding-top);
+  padding-bottom: var(--main-padding-bottom);
+  position: relative;
+  background-color: white;
+}
+
+.features .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 40px;
+}
+
+.features .container .box {
+  text-align: center;
+  border: 1px solid #ccc;
+}
+
+.features .container .box .img-holder {
+  position: relative;
+  overflow: hidden;
+}
+
+.features .container .box:hover {
+  box-shadow: 0px 12px 20px 0px rgb(0 0 0 / 13%),
+    0px 2px 4px 0px rgb(0 0 0 / 12%);
+}
+
+.features .container .box:hover .img-holder::after {
+  border-width: 0px 355px 170px 500px;
+}
+
+.features .container .box .img-holder::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.features .container .quality .img-holder::before {
+  background-color: rgb(244 64 54 / 60%);
+}
+
+.features .container .time .img-holder::before {
+  background-color: rgb(0 150 136 / 60%);
+}
+
+.features .container .passion .img-holder::before {
+  background-color: rgb(3 169 244 / 60%);
+}
+
+.features .container .box .img-holder::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  border-style: solid;
+  border-width: 0px 0px 170px 500px;
+  border-color: transparent transparent #fff transparent;
+  transition: var(--main-transition);
+}
+
+.features .container .box .img-holder img {
+  max-width: 100%;
+}
+
+.features .container .box h2 {
+  font-size: 40px;
+  width: fit-content;
+  margin: auto;
+  position: relative;
+}
+
+.features .container .box h2::after {
+  content: "";
+  position: absolute;
+  bottom: -20px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: calc(100% - 30px);
+  height: 5px;
+}
+
+.features .container .quality h2::after {
+  background-color: rgb(244 64 54);
+}
+
+.features .container .time h2::after {
+  background-color: rgb(0 150 136);
+}
+
+.features .container .passion h2::after {
+  background-color: rgb(3 169 244);
+}
+
+.features .container .box p {
+  font-size: 20px;
+  line-height: 2;
+  color: #777;
+  padding: 25px;
+  margin: 30px 0;
+}
+
+.features .container .box a {
+  font-weight: bold;
+  font-size: 22px;
+  padding: 10px 30px;
+  border-radius: 6px;
+  margin: 0 auto 30px;
+  display: block;
+  width: fit-content;
+  transition: var(--main-transition);
+}
+
+.features .container .quality a {
+  color: rgb(244 64 54);
+  border: 3px solid rgb(244 64 54);
+  background: linear-gradient(to right, rgb(244 64 54) 50%, white 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+}
+
+.features .container .time a {
+  color: rgb(0 150 136);
+  border: 3px solid rgb(0 150 136);
+  background: linear-gradient(to right, rgb(0 150 136) 50%, white 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+}
+
+.features .container .passion a {
+  color: rgb(3 169 244);
+  border: 3px solid rgb(3 169 244);
+  background: linear-gradient(to right, rgb(3 169 244) 50%, white 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+}
+
+.features .container .box:hover a {
+  background-position: left bottom;
+  color: white;
+}
+
+/* End Features section */
+
 /* Start Animation */
 
 @keyframes up-and-down {
@@ -514,6 +719,19 @@ ul {
 @keyframes moving-arrow {
   100% {
     transform: translateX(10px);
+  }
+}
+
+@keyframes flashing {
+  0%,
+  40% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+    width: 200%;
+    height: 200%;
   }
 }
 /* Start Animation */
