--- a/css/ezz.css
+++ b/css/ezz.css
@@ -156,13 +156,13 @@ ul {
   }
 }
 
-.header .container .main-nav > li:hover .mega-menu {
+.header .container .main-nav>li:hover .mega-menu {
   top: calc(100% + 1px);
   opacity: 1;
   z-index: 100;
 }
 
-.header .container .main-nav > li > a {
+.header .container .main-nav>li>a {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -175,14 +175,14 @@ ul {
 }
 
 @media (max-width: 767px) {
-  .header .container .main-nav > li > a {
+  .header .container .main-nav>li>a {
     padding: 10px;
     font-size: 14px;
     height: 40px;
   }
 }
 
-.header .container .main-nav > li > a::before {
+.header .container .main-nav>li>a::before {
   content: "";
   position: absolute;
   background-color: var(--main-color);
@@ -193,12 +193,12 @@ ul {
   transition: var(--main-transition);
 }
 
-.header .container .main-nav > li > a:hover {
+.header .container .main-nav>li>a:hover {
   color: var(--main-color);
   background-color: #fafafa;
 }
 
-.header .container .main-nav > li > a:hover::before {
+.header .container .main-nav>li>a:hover::before {
   left: 0;
 }
 
@@ -396,6 +396,7 @@ ul {
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 40px;
 }
+
 .articles .box {
   box-shadow: 0 2px 15px rgb(0 0 0 / 10%);
   background-color: #fff;
@@ -404,10 +405,12 @@ ul {
   transition: transform var(--main-transition),
     box-shadow var(--main-transition);
 }
+
 .articles .box:hover {
   box-shadow: 0 2px 15px rgb(0 0 0 / 20%);
   transform: translateY(-10px);
 }
+
 .articles .box img {
   width: 100%;
   max-width: 100%;
@@ -707,6 +710,114 @@ ul {
 
 /* End Testimonials Section */
 
+/* Start Team Members Section */
+
+.team {
+  padding-top: var(--main-padding-top);
+  padding-bottom: var(--main-padding-bottom);
+  position: relative;
+}
+
+.team .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 30px;
+}
+
+.team .box {
+  position: relative;
+}
+
+.team .box::before,
+.team .box::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 100%;
+  background-color: #f3f3f3;
+  border-radius: 10px;
+  transition: var(--main-transition);
+}
+
+.team .box::before {
+  width: calc(100% - 60px);
+  z-index: -2;
+}
+
+.team .box::after {
+  width: 0;
+  z-index: -1;
+  background-color: #e4e4e4;
+}
+
+.team .box:hover::after {
+  width: calc(100% - 60px);
+}
+
+.team .box .data {
+  display: flex;
+  align-items: center;
+  padding-top: 60px;
+}
+
+.team .box .data img {
+  width: calc(100% - 60px);
+  transition: var(--main-transition);
+  border-radius: 10px;
+}
+
+.team .box:hover .data img {
+  filter: grayscale(100%);
+}
+
+.team .box .data .social {
+  width: 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+
+}
+
+.team .box .data .social a {
+  width: 60px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.team .box .data .social a:hover i {
+  color: var(--main-color);
+}
+
+.team .box .data .social i {
+  color: #777;
+  transition: var(--main-transition);
+}
+
+.team .box .info {
+  padding-left: 80px;
+}
+
+.team .box .info h3 {
+  margin-bottom: 0;
+  color: var(--main-color);
+  font-size: 22px;
+  transition: var(--main-transition);
+}
+
+.team .box .info p {
+  margin: 10px 0 25px;
+}
+
+.team .box:hover .info h3 {
+  color: #777;
+}
+
+/* End Team Members Section */
+
 /* Start Animation */
 
 @keyframes up-and-down {
@@ -724,6 +835,7 @@ ul {
 }
 
 @keyframes bouncing {
+
   0%,
   10%,
   20%,
@@ -776,6 +888,7 @@ ul {
 }
 
 @keyframes flashing {
+
   0%,
   40% {
     opacity: 1;
@@ -787,4 +900,5 @@ ul {
     height: 200%;
   }
 }
+
 /* Start Animation */
