--- a/css/ezz.css
+++ b/css/ezz.css
@@ -156,13 +156,13 @@ ul {
   }
 }
 
-.header .container .main-nav>li:hover .mega-menu {
+.header .container .main-nav > li:hover .mega-menu {
   top: calc(100% + 1px);
   opacity: 1;
   z-index: 100;
 }
 
-.header .container .main-nav>li>a {
+.header .container .main-nav > li > a {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -175,14 +175,14 @@ ul {
 }
 
 @media (max-width: 767px) {
-  .header .container .main-nav>li>a {
+  .header .container .main-nav > li > a {
     padding: 10px;
     font-size: 14px;
     height: 40px;
   }
 }
 
-.header .container .main-nav>li>a::before {
+.header .container .main-nav > li > a::before {
   content: "";
   position: absolute;
   background-color: var(--main-color);
@@ -193,12 +193,12 @@ ul {
   transition: var(--main-transition);
 }
 
-.header .container .main-nav>li>a:hover {
+.header .container .main-nav > li > a:hover {
   color: var(--main-color);
   background-color: #fafafa;
 }
 
-.header .container .main-nav>li>a:hover::before {
+.header .container .main-nav > li > a:hover::before {
   left: 0;
 }
 
@@ -777,7 +777,6 @@ ul {
   flex-direction: column;
   align-items: center;
   gap: 30px;
-
 }
 
 .team .box .data .social a {
@@ -934,7 +933,6 @@ ul {
   .our-skills img {
     display: none;
   }
-
 }
 
 .our-skills .container .skills {
@@ -945,7 +943,6 @@ ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
-
 }
 
 .our-skills .skill h3 span {
@@ -1055,7 +1052,6 @@ ul {
 .work-steps .info .box h3 {
   margin: 0;
   font-size: 22px;
-
 }
 
 .work-steps .info .box p {
@@ -1065,8 +1061,159 @@ ul {
   font-size: 18px;
 }
 
-
 /* End Work Steps Section */
+
+/* Start Events Section */
+
+.events {
+  padding-top: var(--main-padding-top);
+  padding-bottom: var(--main-padding-bottom);
+}
+
+.events .container {
+ display: flex;
+ align-items: center;
+ flex-wrap: wrap;
+}
+
+.events .container img {
+  max-width: 450px;
+}
+
+@media (max-width: 991px) {
+  .events .container img {
+    display: none;
+  }
+}
+
+.events .container .info {
+  flex: 1;
+}
+
+.events .container .info .time {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin: 20px auto;
+}
+
+.events .container .info .time .unit {
+  border: 1px solid #d4d4d4;
+  border-radius: 6px;
+  text-align: center;
+  width: 75px;
+  transition: var(--main-transition);
+}
+
+.events .container .info .time .unit:hover,
+.events .container .info .time .unit:hover span:last-child {
+  border-color: var(--main-color);
+}
+
+.events .container .info .time .unit span {
+  display: block;
+  transition: var(--main-transition);
+}
+
+.events .container .info .time .unit span:first-child {
+  font-size: 35px;
+  padding: 15px;
+  color: var(--main-color);
+  font-weight: bold;
+}
+
+.events .container .info .time .unit span:last-child {
+  padding: 8px 10px;
+  font-size: 13px;
+  border-top: 1px solid #d4d4d4;
+}
+
+.events .title {
+font-size: 30px;
+text-align: center;
+margin: 40px 0 0;
+}
+
+.events .description {
+  text-align: center;
+  line-height: 1.7;
+  font-size: 19px;
+  color: #777;
+}
+
+.events .container .subscribe {
+  width: 100%;
+  margin-top: 50px;
+}
+
+.events .container .subscribe form {
+  width: 600px;
+  margin: 20px auto;
+  padding: 30px 40px;
+  background-color: #f6f5f5;
+  border-radius: 50px;
+  display: flex;
+  gap: 20px;
+}
+
+@media (max-width: 767px) {
+  .events .container .subscribe form {
+    max-width: 100%;
+    padding: 20px;
+    flex-direction: column;
+    border-radius: 0;
+  }
+}
+
+.events .container .subscribe form input[type="email"] {
+  padding: 20px;
+  border-radius: 50px;
+  border: none;
+  flex: 1;
+  caret-color: var(--main-color);
+}
+
+@media (max-width: 767px) {
+  .events .container .subscribe form  input[type="email"] {
+    border-radius:0;
+  }
+}
+
+.events .container .subscribe form input[type="email"]:focus {
+  outline-color: var(--main-color);
+}
+
+.events .container .subscribe form input[type="email"]::placeholder {
+  transition: var(--main-transition);
+}
+
+.events .container .subscribe form input[type="email"]:focus::placeholder {
+  opacity: 0;
+}
+
+.events .container .subscribe form input[type="submit"] {
+  border-radius: 50px;
+  border: none;
+  padding: 20px;
+  background-color: var(--main-color);
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+  transition: var(--main-transition);
+}
+
+@media (max-width: 767px) {
+  .events .container .subscribe form  input[type="submit"] {
+    border-radius:0;
+  }
+}
+
+.events .container .subscribe form input[type="submit"]:hover {
+  background-color: var(--main-color-alt);
+}
+
+/* End Events Section */
 
 /* Start Animation */
 
@@ -1085,7 +1232,6 @@ ul {
 }
 
 @keyframes bouncing {
-
   0%,
   10%,
   20%,
@@ -1138,7 +1284,6 @@ ul {
 }
 
 @keyframes flashing {
-
   0%,
   40% {
     opacity: 1;
