--- a/css/ezz.css
+++ b/css/ezz.css
@@ -1071,9 +1071,9 @@ ul {
 }
 
 .events .container {
- display: flex;
- align-items: center;
- flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .events .container img {
@@ -1130,9 +1130,9 @@ ul {
 }
 
 .events .title {
-font-size: 30px;
-text-align: center;
-margin: 40px 0 0;
+  font-size: 30px;
+  text-align: center;
+  margin: 40px 0 0;
 }
 
 .events .description {
@@ -1175,8 +1175,8 @@ margin: 40px 0 0;
 }
 
 @media (max-width: 767px) {
-  .events .container .subscribe form  input[type="email"] {
-    border-radius:0;
+  .events .container .subscribe form input[type="email"] {
+    border-radius: 0;
   }
 }
 
@@ -1204,8 +1204,8 @@ margin: 40px 0 0;
 }
 
 @media (max-width: 767px) {
-  .events .container .subscribe form  input[type="submit"] {
-    border-radius:0;
+  .events .container .subscribe form input[type="submit"] {
+    border-radius: 0;
   }
 }
 
@@ -1214,6 +1214,157 @@ margin: 40px 0 0;
 }
 
 /* End Events Section */
+
+/* Start Pricing Section */
+
+.pricing {
+  padding-top: var(--main-padding-top);
+  padding-bottom: var(--main-padding-bottom);
+  position: relative;
+  background-color: var(--section-background);
+}
+
+.pricing .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 30px;
+}
+
+.pricing .container .box {
+  background-color: #fff;
+  text-align: center;
+  box-shadow: 0 12px 20px 0 rgb(0 0 0 / 13%), 0 2px 4px 0 rgb(0 0 0 / 12%);
+  position: relative;
+  z-index: 1;
+  transition: var(--main-transition);
+}
+
+.pricing .container .box::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 50%;
+  background-color: #f6f6f6;
+  transition: var(--main-transition);
+  z-index: -1;
+}
+
+.pricing .container .box::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 0;
+  height: 50%;
+  background-color: #f6f6f6;
+  transition: var(--main-transition);
+  z-index: -1;
+}
+
+.pricing .container .box:hover::before,
+.pricing .container .box:hover::after {
+  width: 100%;
+}
+
+.pricing .container .popular {
+  transform: translateY(-20px);
+}
+
+@media (max-width: 1200px) {
+  .pricing .container .popular {
+    transform: translateY(0px);
+  }
+}
+
+.pricing .container .popular .label {
+  position: absolute;
+  top: 0;
+  right: 20px;
+  background-color: var(--main-color);
+  padding: 10px 10px 35px 10px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 18px;
+  writing-mode: vertical-rl;
+  width: 40px;
+}
+
+.pricing .container .popular .label::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  border-style: solid;
+  border-color: transparent transparent white transparent;
+  border-width: 20px;
+}
+
+.pricing .container .box .title {
+  font-size: 25px;
+  font-weight: bold;
+  margin: 30px 0;
+  letter-spacing: -1px;
+}
+
+.pricing .container .box img {
+  width: 80px;
+  margin-bottom: 30px;
+}
+
+.pricing .container .box .price {
+  margin-bottom: 20px;
+}
+
+.pricing .container .box .price .amount {
+  font-size: 60px;
+  font-weight: bold;
+  color: var(--main-color);
+  display: block;
+  margin-bottom: 5px;
+}
+
+.pricing .container .box .price .time {
+  color: #777;
+}
+
+.pricing .container .box ul {
+  text-align: left;
+}
+
+.pricing .container .box ul li {
+  padding: 20px;
+  border-top: 1px solid #eee;
+}
+
+.pricing .container .box ul li::before {
+  content: "\f00c";
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: var(--main-color);
+  margin-right: 10px;
+}
+
+.pricing .container .box a {
+  font-weight: bold;
+  color: var(--main-color);
+  padding: 15px 20px;
+  border: 2px solid var(--main-color);
+  border-radius: 6px;
+  display: block;
+  width: fit-content;
+  margin: 30px auto 40px;
+  transition: var(--main-transition);
+}
+
+.pricing .container .box a:hover {
+  background-color: var(--main-color-alt);
+  border-color: var(--main-color-alt);
+  color: #fff;
+}
+
+/* End Pricing Section */
 
 /* Start Animation */
 
