--- a/css/ezz.css
+++ b/css/ezz.css
@@ -1366,6 +1366,78 @@ ul {
 
 /* End Pricing Section */
 
+/* Start Videos Section */
+
+.videos {
+  padding-top: var(--main-padding-top);
+  padding-bottom: var(--main-padding-bottom);
+}
+
+.videos .holder {
+  display: flex;
+  justify-content: center;
+  background-color: var(--section-background);
+  border: 1px solid #ddd;
+}
+
+@media (max-width: 991px) {
+  .videos .holder {
+    flex-direction: column;
+  }
+}
+
+.videos .holder .list {
+  min-width: 300px;
+  background-color: #fff;
+}
+
+.videos .holder .list .name {
+  background-color: #f4f4f4;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+}
+
+.videos .holder .list ul li {
+  padding: 20px;
+  border-top: 1px solid #ddd;
+  background-color: #fff;
+  cursor: pointer;
+  transition: var(--main-transition);
+}
+
+.videos .holder .list ul li:hover {
+  background-color: #fafafa;
+  color: var(--main-color);
+}
+
+.videos .holder .list ul li span {
+  display: block;
+  margin-top: 10px;
+  color: #777;
+}
+
+.videos .holder .preview {
+  background-color: #e2e2e2;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.videos .holder .preview img {
+  max-width: 100%;
+}
+
+.videos .holder .preview .info {
+  padding: 20px;
+  background-color: #fff;
+  margin-top: 10px;
+}
+
+/* End Videos Section */  
+
 /* Start Animation */
 
 @keyframes up-and-down {
