--- a/css/ezz.css
+++ b/css/ezz.css
@@ -1436,7 +1436,96 @@ ul {
   margin-top: 10px;
 }
 
-/* End Videos Section */  
+/* End Videos Section */
+
+/* start Stats Aection */
+
+.stats {
+  padding-top: var(--main-padding-top);
+  padding-bottom: var(--main-padding-bottom);
+  background-image: url(../imgs/stats.jpg);
+  background-size: cover;
+  position: relative;
+  min-height: 300px;
+}
+
+.stats::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(255 255 255 / 95%);
+}
+
+.stats h2 {
+  font-size: 40px;
+  font-weight: bold;
+  margin: 0 auto 50px;
+  width: fit-content;
+  position: relative;
+}
+
+.stats .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 20px;
+}
+
+.stats .box {
+  padding: 30px 15px;
+  background-color: #fff;
+  text-align: center;
+  position: relative;
+  opacity: 0.8;
+  transition: var(--main-transition);
+}
+
+.stats .box::before,
+.stats .box::after {
+  content: "";
+  position: absolute;
+  width: 2px;
+  height: 0;
+  background-color: var(--main-color);
+  transition: 1s;
+}
+
+.stats .box::before {
+  bottom: 0;
+  left: 0;
+}
+
+.stats .box::after {
+  top: 0;
+  right: 0;
+}
+
+.stats .box:hover::before,
+.stats .box:hover::after {
+  height: 100%;
+}
+
+.stats .box:hover {
+  opacity: 1;
+}
+
+.stats .box .number {
+  display: block;
+  font-size: 50px;
+  font-weight: bold;
+  margin: 10px 0;
+}
+
+.stats .box .text {
+  color: var(--main-color);
+  font-size: 18px;
+  font-weight: bold;
+  font-style: italic;
+}
+
+/* End Stats Aection */
 
 /* Start Animation */
 
